# mmxBoxUsbRWIrda

./: CMakeLists.txt
jni/: Android.mk  Application.mk  IrdaMgr.cpp  IrdaMgr.h  usbRW.cpp  usbhost.h  webServer.cpp
